<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="fbHP_WeldPlateHeaterChecker" Id="{1ae79a93-4e83-4f7d-953a-e72f65923504}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK fbHP_WeldPlateHeaterChecker
VAR_INPUT
	rSettedUpPower	: REAL;			//Wartość wykorzystania grzałki w [%]
	bHP_InWork		: BOOL;
END_VAR
VAR_OUTPUT
	bWeldingPlateHeaterError	: BOOL;
END_VAR
VAR
	iRawCurrentValue		AT %I* 	: INT;						// Wartość prądu odczytana z zasilania grzałek
	fbScallingCurrentMeasurement	: fbAnalogMeasurement;		//Bloczek skalujący
	rReadCurrentValue				: REAL;						//Wartość odczytana z pomiaru
	rCalculatedCurrentUsageValue	: REAL;						//Wyliczona wartość z pomiaru pracy grzałek
	fbAlarmFilterTimer				: TON;						//Filtorwanie wystapienia błędu z mocą grzałki
	rDeviation						: REAL;
	bDeviationTooHigh				: BOOL;
END_VAR
VAR PERSISTENT
	stParams	: stHP_WelderingPlateParams;	// Parametry detekcji grzałek
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[//filtrowanie sygnału z odczytu pomiaru prądowego
fbScallingCurrentMeasurement(rIn:=TO_REAL(iRawCurrentValue),stMeasureScalingData:=stParams.stCalibrationData,rOutFiltered=>rReadCurrentValue,tStalaCzasowa:=T#100MS);
//Przeliczone zuzycie prądu
rCalculatedCurrentUsageValue := LIMIT(0.01,TO_REAL(stParams.iWeldingPlateHeatersAmount) * stParams.rWeldingPlateHeaterPower * rSettedUpPower / 100 / 230,8);
//wysterowanie alarmu o błędzie na grzałce
fbAlarmFilterTimer(IN:=(bDeviationTooHigh AND stParams.bEnableWelderHeatersBurnDetection),PT:=T#30S);
bWeldingPlateHeaterError := fbAlarmFilterTimer.Q  AND NOT bHP_InWork;
IF rCalculatedCurrentUsageValue < 0.5 THEN
	rDeviation	:= 0;	
ELSE
	rDeviation	:= LIMIT(0,((ABS(rCalculatedCurrentUsageValue - rReadCurrentValue)/rCalculatedCurrentUsageValue)*100),100);
END_IF
bDeviationTooHigh := (stParams.rMaximalCurrentDeviation <= rDeviation);
]]></ST>
    </Implementation>
    <LineIds Name="fbHP_WeldPlateHeaterChecker">
      <LineId Id="21" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="37" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>